--- a/PP1/package.json
+++ b/PP1/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "jsonwebtoken": "^9.0.2",
     "react": "^18",
     "react-dom": "^18",
     "next": "14.2.15"
