--- a/PP1/package.json
+++ b/PP1/package.json
@@ -32,6 +32,8 @@
     "eslint-config-next": "14.2.15",
     "postcss": "^8",
     "prisma": "^5.21.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
