--- a/PP2/package.json
+++ b/PP2/package.json
@@ -21,7 +21,8 @@
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-router-dom": "^6.28.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
