--- a/PP2/package.json
+++ b/PP2/package.json
@@ -10,24 +10,30 @@
   },
   "dependencies": {
     "@codemirror/lang-cpp": "^6.0.2",
+    "@codemirror/lang-go": "^6.0.1",
     "@codemirror/lang-java": "^6.0.1",
     "@codemirror/lang-javascript": "^6.2.2",
+    "@codemirror/lang-php": "^6.0.1",
     "@codemirror/lang-python": "^6.1.6",
     "@codemirror/theme-one-dark": "^6.1.2",
     "@prisma/client": "^5.21.1",
     "@types/lodash": "^4.17.13",
+    "@types/tar-stream": "^3.1.3",
     "@uiw/react-codemirror": "^4.23.5",
     "bcrypt": "^5.1.1",
+    "dockerode": "^4.0.2",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
-    "react-router-dom": "^6.28.0"
+    "react-router-dom": "^6.28.0",
+    "tar-stream": "^3.1.7"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/dockerode": "^3.3.32",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
