--- a/PP2/package.json
+++ b/PP2/package.json
@@ -35,7 +35,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/dockerode": "^3.3.32",
     "@types/jsonwebtoken": "^9.0.7",
-    "@types/node": "^20",
+    "@types/node": "^20.17.6",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
@@ -43,9 +43,10 @@
     "postcss": "^8",
     "prisma": "^5.21.1",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.3"
   },
   "prisma": {
-    "seed": "node prisma/seed.mjs"
+    "seed": "node --experimental-modules --loader ts-node/esm prisma/seed.mjs"
   }
 }
