--- a/PP2/package.json
+++ b/PP2/package.json
@@ -21,6 +21,7 @@
     "@types/tar-stream": "^3.1.3",
     "@uiw/react-codemirror": "^4.23.5",
     "bcrypt": "^5.1.1",
+    "date-fns": "^4.1.0",
     "dockerode": "^4.0.2",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
