--- a/PP2/.eslintrc.json
+++ b/PP2/.eslintrc.json
@@ -1,3 +1,8 @@
 {
+  "rules": {
+    "@typescript-eslint/ban-ts-comment": "off",
+    "@typescript-eslint/no-unused-vars": "off",
+    "@typescript-eslint/no-explicit-any": "off"
+  },
   "extends": ["next/core-web-vitals", "next/typescript"]
 }
